--- a/cv/css/header.css
+++ b/cv/css/header.css
@@ -5,6 +5,7 @@
 
 header: #353535
 главный желтый цвет: #FFDB93
+цвет фона: #383838
 
 
 */
@@ -13,7 +14,31 @@ header: #353535
 /* Шапка */
 
 .header {
+    position: fixed;
+    width: 100%;
+    z-index: 100;
     background-color: #353535;
+}
+
+
+/* Progress Bar */
+
+
+/* The progress container (grey background) */
+
+.progress__container {
+    width: 100%;
+    height: 2px;
+    background: #353535;
+}
+
+
+/* The progress bar (scroll indicator) */
+
+.progress__bar {
+    height: 2px;
+    background: #FFDB93;
+    width: 0%;
 }
 
 
@@ -30,13 +55,13 @@ header: #353535
 /* Логотип */
 
 .logo {
-	position: relative;
+    position: relative;
     min-width: 50px;
     min-height: 50px;
 }
 
 .logo img {
-	position: absolute;
+    position: absolute;
     width: 100%;
     height: 100%;
 }
@@ -57,16 +82,38 @@ header: #353535
 
 /* Бургер меню и Информационная иконка */
 
+.menu__burger {
+    background-image: url("./../img/svg/icon_\ burger_menu.svg");
+}
+
+.menu__burger:active {
+    background-image: url("./../img/svg/icon_burger_menu\ _\ active.svg");
+}
+
 .menu__burger,
 .menu__info {
     display: none;
 }
 
-.menu__burger img
+.menu__burger img,
 .menu__info img {
     width: 100%;
     height: 100%;
 }
+
+
+/* Бургер меню отклик*/
+
+
+/* .menu__burger object {
+    width: 100%;
+    height: 100%;
+} */
+
+
+/* .menu__burger:active object svg rect {
+    fill: #353535;
+} */
 
 
 /* Обычное (лист) меню */
