--- a/src/scss/#style.scss
+++ b/src/scss/#style.scss
@@ -12,3 +12,4 @@
 	MAIN STYLE
 ========================================================================================= */
 @import "app";
+@import "header";
