--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -2,6 +2,14 @@
 
 :root {
 	--bg: rgba(255, 255, 255, 1);
+
+	// header
+	--menu-text: #695d4f;
+	--sub-menu-text: #8c8c8c;
+	--sub-menu-shadow: rgba(105, 93, 79, 0.25);
+
+	// img
+	--btn-sub-menu: url("../img/menu/btn_sub_menu.svg");
 }
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MAIN */
@@ -18,4 +26,22 @@ html {
 	width: 100%;
 	min-width: 320px;
 	min-height: 100vh;
+}
+
+.app {
+	width: 100%;
+	min-height: 100vh;
+	background-color: var(--bg);
+
+	// .app__container
+	&__container {
+		margin: 0 auto;
+		max-width: 1270px;
+	}
+
+	// .app__body
+	&__body {
+		width: 100%;
+		height: 100vh;
+	}
 }
