Create home page

--- a/src/scss/#style.scss
+++ b/src/scss/#style.scss
@@ -2,6 +2,7 @@
 	IMPORT FONTS
 ========================================================================================= */
 @import "fonts";
+@import "icons";
 
 /* ======================================================================================
 	NORMALIZE
@@ -13,3 +14,6 @@
 ========================================================================================= */
 @import "app";
 @import "header";
+@import "content";
+@import "./sections/home";
+@import "footer";
