--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -2,11 +2,26 @@
 
 :root {
 	--bg: rgba(255, 255, 255, 1);
+	--main: #9f978e;
+	--main-bold: #867564;
+	--main-black: #6a543f;
+	--more-text: #b9b9b9;
+	--line: rgba(231, 187, 101, 0.5);
+	--line-bold: rgba(231, 187, 101, 1);
+	--selection: rgba(0, 0, 0, 0.05);
 
 	// header
 	--menu-text: #695d4f;
 	--sub-menu-text: #8c8c8c;
+	--sub-menu-item-bg: rgba(105, 93, 79, 0.1);
 	--sub-menu-shadow: rgba(105, 93, 79, 0.25);
+
+	// label
+	--label-orange-bg: rgba(231, 187, 101, 0.2);
+	--label-orange-text: rgba(231, 187, 101, 1);
+
+	// footer
+	--footer-text: #c4c4c4;
 
 	// img
 	--btn-sub-menu: url("../img/menu/btn_sub_menu.svg");
@@ -41,7 +56,16 @@ html {
 
 	// .app__body
 	&__body {
+		display: grid;
+		grid-template: 1fr 52px / 12fr;
+		grid-template-areas:
+			"content"
+			"footer";
 		width: 100%;
-		height: 100vh;
+		min-height: 100vh;
 	}
+}
+
+::selection {
+	background-color: var(--selection);
 }
