--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -45,3 +45,56 @@
 		}
 	}
 }
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ topic */
+
+.topic {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: flex-start;
+	margin-bottom: 50px;
+	width: 100%;
+
+	// .topic__title
+	&__title {
+		margin-bottom: 10px;
+		font-weight: 700;
+		font-size: 64px;
+		text-transform: capitalize;
+		color: var(--topic-title);
+	}
+
+	// .topic__description
+	&__description {
+		font-weight: 600;
+		font-size: 20px;
+		color: var(--footer-text);
+	}
+}
+
+@media (max-width: 768px) {
+	.topic {
+		&__title {
+			font-size: 40px;
+		}
+
+		&__description {
+			font-size: 14px;
+		}
+	}
+}
+
+@media (max-width: 425px) {
+	.topic {
+		margin-bottom: 20px;
+
+		&__title {
+			font-size: 26px;
+		}
+
+		&__description {
+			font-size: 12px;
+		}
+	}
+}
