--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -6,14 +6,14 @@
 	top: 0;
 	z-index: 100;
 	width: 100%;
+	background: var(--header-line);
+	transition: transform 300ms ease;
 
 	// .header__container
 	&__container {
 		margin: 0 auto;
-		border-bottom: 1px solid var(--line);
 		padding: 16px 32px;
 		max-width: 1270px;
-		background-color: var(--bg);
 	}
 
 	// .header__body
@@ -23,6 +23,11 @@
 		justify-content: flex-start;
 		width: 100%;
 		height: 50px;
+	}
+
+	// .header_out
+	&._out {
+		transform: translateY(-100%);
 	}
 }
 
