--- a/src/scss/sections/_home.scss
+++ b/src/scss/sections/_home.scss
@@ -1,6 +1,8 @@
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~ HOME */
 
-#sectionHome {
+#home {
+	min-height: 550px;
+
 	.section__container {
 		padding-top: 112px;
 	}
@@ -12,7 +14,6 @@
 		justify-content: center;
 		width: 100%;
 		height: 100%;
-		min-height: 420px;
 	}
 }
 
