Create contact page

--- a/src/scss/#style.scss
+++ b/src/scss/#style.scss
@@ -23,4 +23,5 @@
 @import "./sections/slider";
 @import "./sections/skills";
 @import "./sections/works";
+@import "./sections/contact";
 @import "footer";
