--- a/src/scss/sections/_slider.scss
+++ b/src/scss/sections/_slider.scss
@@ -2,7 +2,7 @@
 
 #slider {
 	// background-color: var(--label-orange-bg);
-	background: url("https://lh6.googleusercontent.com/-hiOBZWbNiho8-ABfurHqKUCEeSbjVaCL38PxFbbCLfA8eQqFW5nEIgkZa0POYPBRyLTk7wj_pY1O6AtrsK2=w1920-h913-rw") 0 0 / 100% auto no-repeat fixed;
+	background: url("https://raw.githubusercontent.com/luamoris/webland/patch/content/struct/src/img/slider/1.jpg") 0 0 / 100% auto no-repeat fixed;
 
 	.section__body {
 		display: flex;
