--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -26,7 +26,9 @@
 	--topic-title: #877d72;
 
 	// footer
-	--footer-text: #c4c4c4;
+	--footer-bg: rgba(51, 51, 51, 1);
+	--footer-bg-black: rgba(255, 255, 255, 0.1);
+	--footer-text: rgba(196, 196, 196, 1);
 
 	// button
 	--btn-orange-bg: #faf1e0;
@@ -53,6 +55,11 @@
 
 	// works item
 	--works-item-bg: rgba(247, 221, 170, 1);
+
+	// contact
+	--contact-color: rgba(196, 196, 196, 0.8);
+	--contact-color-hover: rgba(196, 196, 196, 1);
+	--contact-hover: rgba(255, 255, 255, 0.2);
 
 	// img
 	--btn-sub-menu: url("../img/menu/btn_sub_menu.svg");
@@ -88,7 +95,7 @@ html {
 	// .app__body
 	&__body {
 		display: grid;
-		grid-template: 1fr 52px / 12fr;
+		grid-template: 1fr auto / 12fr;
 		grid-template-areas:
 			"content"
 			"footer";
