--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -2,28 +2,34 @@
 
 .footer {
 	grid-area: footer;
+	margin-top: 100px;
+	width: 100%;
+	background-color: var(--footer-bg);
 
 	// .footer__container
 	&__container {
-		padding: 30px 0 10px;
+		padding: 30px 0 0;
 		width: 100%;
-		height: 100%;
 	}
 
 	// .footer__body
 	&__body {
 		display: flex;
+		flex-direction: column;
 		align-items: center;
 		justify-content: center;
 		width: 100%;
-		height: 100%;
 	}
 }
 
 .copyright {
-	font-family: "Montserrat";
+	display: block;
+	padding: 5px 20px;
+	width: 100%;
 	font-weight: 500;
 	font-size: 10px;
-	line-height: 12px;
+	line-height: 14px;
+	text-align: center;
 	color: var(--footer-text);
+	background-color: var(--footer-bg-black);
 }
