--- a/src/scss/#style.scss
+++ b/src/scss/#style.scss
@@ -1,27 +1,63 @@
-/* ======================================================================================
+/* ==================================================================
+	COLOR
+===================================================================== */
+@import "color";
+
+/* ==================================================================
+	SCSS
+===================================================================== */
+
+// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ VALUES
+$container: 1270px;
+
+// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MIXIN
+@import "mixin";
+
+/* ==================================================================
 	IMPORT FONTS
-========================================================================================= */
+===================================================================== */
 @import "fonts";
 @import "icons";
 
-// ========================================================= MIXIN
-@import "mixin";
-
-/* ======================================================================================
+/* ==================================================================
 	NORMALIZE
-========================================================================================= */
+===================================================================== */
 @import "normalize";
 
-/* ======================================================================================
+/* ==================================================================
 	MAIN STYLE
-========================================================================================= */
-@import "app";
-@import "header";
-@import "content";
+===================================================================== */
+
+// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MAIN
+
+html {
+	font-family: "Montserrat";
+	font-weight: 400;
+	font-style: normal;
+	font-size: 14px;
+}
+
+#wrapper {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	min-width: 320px;
+	min-height: 100vh;
+}
+
+::selection {
+	background-color: var(--selection);
+}
+
+// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ COMPONENTS
+@import "components";
+
+// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ CONTENT
+@import "./parts/app";
+@import "./parts/page";
+@import "./parts/header";
 @import "./sections/home";
 @import "./sections/about";
-@import "./sections/slider";
-@import "./sections/skills";
 @import "./sections/works";
-@import "./sections/contact";
-@import "footer";
+@import "./sections/skills";
+@import "./parts/footer";
