--- a/src/scss/sections/_works.scss
+++ b/src/scss/sections/_works.scss
@@ -1,12 +1,12 @@
-/* ~~~~~~~~~~~~~~~~~~~~~~~~~ WORKS */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ WORKS */
 
 #works {
-	.section__content {
+	.content {
 		width: 100%;
 	}
 }
 
-/* ~~~~~~~~~~~~~~~~~~~~~~~~~ SCAN */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ SCAN */
 
 .scan {
 	margin-bottom: 20px;
@@ -22,6 +22,8 @@
 		width: 100%;
 	}
 }
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ FORM */
 
 .form {
 	width: 100%;
@@ -53,6 +55,8 @@
 		color: var(--form-text);
 	}
 }
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ SEARCHER */
 
 .searcher {
 	width: 100%;
@@ -92,6 +96,8 @@
 		}
 	}
 }
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ SORTER */
 
 .sorter {
 	width: 100%;
@@ -162,6 +168,8 @@
 		}
 	}
 }
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ FILTER */
 
 .filter {
 	margin-top: 16px;
@@ -295,7 +303,7 @@
 	}
 }
 
-/* ~~~~~~~~~~~~~~~~~~~~~~~~~ GALLERY */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ GALLERY */
 
 .gallery {
 	@include adaptive("grid-column-gap", 1440, 768, 40, 20);
@@ -368,7 +376,7 @@ body.mouse {
 	}
 }
 
-/* ~~~~~~~~~~~~~~~~~~~~~~~~~ PAGINATION */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ PAGINATION */
 
 .pagination {
 	width: 100%;
@@ -443,7 +451,7 @@ body.mouse {
 	}
 }
 
-/* ~~~~~~~~~~~~~~~~~~~~~~~~~ MEDIA */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MEDIA MAX */
 
 @media (max-width: 375px) {
 	.card {
