--- a/src/scss/sections/_home.scss
+++ b/src/scss/sections/_home.scss
@@ -1,31 +1,27 @@
-/* ~~~~~~~~~~~~~~~~~~~~~~~~~ HOME */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ HOME */
 
 #home {
-	min-height: 550px;
-
-	.section__container {
-		padding-top: 112px;
-	}
-
-	.section__body {
+	.page__body {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
-		width: 100%;
-		height: 100%;
 	}
 }
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ WELCOME */
 
 .welcome {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-start;
-	width: 500px;
+	width: 100%;
+	max-width: 500px;
 
 	// .welcome__avatar
 	&__avatar {
+		margin-bottom: 20px;
 		padding: 0 50px;
 		width: 100%;
 		animation: move-circle 20s infinite linear;
@@ -37,19 +33,22 @@
 
 	// .welcome__name
 	&__name {
+		display: block;
+		margin: 0;
 		width: 100%;
 		font-weight: 900;
 		font-size: 60px;
 		text-align: center;
 		text-transform: uppercase;
-		color: var(--main-black);
+		color: var(--text-decoration);
 	}
 
 	// .welcome__line
 	&__line {
+		border-radius: 1px;
 		width: 100%;
-		height: 10px;
-		background-color: var(--line-bold);
+		height: 12px;
+		background-color: var(--line-decoration);
 	}
 
 	// .welcome__status
@@ -57,29 +56,7 @@
 		margin: 20px 0 0;
 		padding: 0 50px;
 		width: 100%;
-		font-size: 24px;
-	}
-}
-
-@keyframes move-circle {
-	0% {
-		transform: rotate(0);
-	}
-
-	25% {
-		transform: rotate(90deg);
-	}
-
-	50% {
-		transform: rotate(0);
-	}
-
-	75% {
-		transform: rotate(-90deg);
-	}
-
-	100% {
-		transform: rotate(0);
+		font-size: 22px;
 	}
 }
 
@@ -104,15 +81,15 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-start;
-	margin-top: 50px;
-	width: 100px;
-	color: var(--more-text);
+	margin: 50px 0 20px;
+	width: 100%;
 
 	// .more__text
 	&__text {
 		font-weight: 800;
-		font-size: 24px;
+		font-size: 22px;
 		text-transform: uppercase;
+		color: var(--more-color);
 	}
 
 	// .more__arrow
@@ -125,12 +102,37 @@
 		span {
 			margin-top: -3px;
 			font-size: 20px;
+			color: var(--more-color);
 			animation: arrow-down 2s infinite;
 
 			&:nth-child(2) {
 				animation-delay: -0.2s;
 			}
 		}
+	}
+}
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ KEYFRAMES */
+
+@keyframes move-circle {
+	0% {
+		transform: rotate(0);
+	}
+
+	25% {
+		transform: rotate(90deg);
+	}
+
+	50% {
+		transform: rotate(0);
+	}
+
+	75% {
+		transform: rotate(-90deg);
+	}
+
+	100% {
+		transform: rotate(0);
 	}
 }
 
@@ -150,26 +152,28 @@
 	}
 }
 
-@media (max-width: 1024px), (max-height: 1024px) {
-	.welcome {
-		width: 400px;
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MEDIA MAX */
 
-		&__status {
-			font-size: 18px;
-		}
+@media (max-width: 1024px), (max-height: 768px) {
+	.welcome {
+		max-width: 400px;
 
 		&__name {
-			font-size: 46px;
+			font-size: 44px;
 		}
 
 		&__line {
-			height: 6px;
+			height: 10px;
+		}
+
+		&__status {
+			font-size: 18px;
 		}
 	}
 
 	.more {
 		&__text {
-			font-size: 18px;
+			font-size: 16px;
 		}
 
 		&__arrow {
@@ -180,27 +184,30 @@
 	}
 }
 
-@media (max-width: 768px), (max-height: 768px) {
+@media (max-width: 768px), (max-height: 700px) {
 	.welcome {
-		width: 300px;
-
-		&__status {
-			padding: 0 20px;
-			font-size: 16px;
-		}
+		max-width: 300px;
 
 		&__name {
-			font-size: 36px;
+			font-size: 40px;
 		}
 
 		&__line {
-			height: 5px;
+			height: 8px;
+		}
+
+		&__status {
+			margin: 10px 0 0;
+			padding: 0 20px;
+			font-size: 16px;
 		}
 	}
 
 	.more {
+		margin: 30px 0 20px;
+
 		&__text {
-			font-size: 16px;
+			font-size: 14px;
 		}
 
 		&__arrow {
@@ -213,23 +220,25 @@
 
 @media (max-width: 425px), (max-height: 600px) {
 	.welcome {
-		width: 200px;
-
-		&__status {
-			padding: 0 10px;
-			font-size: 10px;
-		}
+		max-width: 200px;
 
 		&__name {
 			font-size: 30px;
 		}
 
 		&__line {
-			height: 4px;
+			height: 6px;
+		}
+
+		&__status {
+			padding: 0 10px;
+			font-size: 10px;
 		}
 	}
 
 	.more {
+		margin: 20px 0;
+
 		&__text {
 			font-size: 10px;
 		}
